k8s/manifests/network-system/ingress-nginx/static-routes/brewpiless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewpiless
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80

  externalName: ESP_7DE997.${INTERNAL_DOMAIN}
