k8s/manifests/network-system/ingress-nginx/static-routes/brewpiless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewpiless
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "glass-mug-variant"
    hajimari.io/appName: "brewpi"

spec:
  tls:
    - secretName: tls.brewpi
      hosts:
        - "brewpi.${EXTERNAL_DOMAIN}"

  rules:
    - host: brewpi.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brewpiless
                port:
                  number: 80
